--- a/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
+++ b/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DpiConverter.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
