--- a/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
+++ b/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form1_hw.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form1_hw.Designer.cs">
+      <DependentUpon>Form1_hw.cs</DependentUpon>
     </Compile>
     <Compile Include="OverlayForm.cs">
       <SubType>Form</SubType>
@@ -63,8 +63,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskbarDrawer.cs" />
     <Compile Include="WinformsDpiHelper.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form1_hw.resx">
+      <DependentUpon>Form1_hw.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OverlayForm.resx">
       <DependentUpon>OverlayForm.cs</DependentUpon>
