--- a/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
+++ b/hardwareMonitor_atTaskbar/hardwareMonitor_atTaskbar.csproj
@@ -1,104 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A4A3B49-73D3-4930-9703-229F0B69242E}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>hardwareMonitor_atTaskbar</RootNamespace>
-    <AssemblyName>hardwareMonitor_atTaskbar</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <LangVersion>latest</LangVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BaseDpiForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1_hw.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1_hw.Designer.cs">
-      <DependentUpon>Form1_hw.cs</DependentUpon>
-    </Compile>
-    <Compile Include="OverlayForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="OverlayForm.Designer.cs">
-      <DependentUpon>OverlayForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaskbarDrawer.cs" />
-    <Compile Include="WinformsDpiHelper.cs" />
-    <EmbeddedResource Include="Form1_hw.resx">
-      <DependentUpon>Form1_hw.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="OverlayForm.resx">
-      <DependentUpon>OverlayForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="app.manifest" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<!-- Multi-targeting: Builds for both Win10+ (.NET 8) and Win7 (.NET 4.8) -->
+		<TargetFrameworks>net8.0-windows;net48</TargetFrameworks>
+
+		<UseWindowsForms>true</UseWindowsForms>
+		<RootNamespace>hardwareMonitor_atTaskbar</RootNamespace>
+		<AssemblyName>hardwareMonitor_atTaskbar</AssemblyName>
+
+		<!-- Unlocks C# 12 for both versions -->
+		<LangVersion>12.0</LangVersion>
+		<Nullable>enable</Nullable>
+
+		<!-- Link your existing manifest -->
+		<ApplicationManifest>app.manifest</ApplicationManifest>
+
+		<!-- Organize output: bin\Release\net48 and bin\Release\net8.0-windows -->
+		<AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
+	</PropertyGroup>
+
+	<!-- PACKAGES -->
+	<ItemGroup>
+		
+			<!-- 
+
+			Polyfill: Gives .NET 4.8 the powers of .NET 8 (C# 12 support)
+			<PackageReference Include="Polyfill" Version="6.*">
+				<PrivateAssets>all</PrivateAssets>
+				<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			</PackageReference>
+
+			 System.Memory: Makes .NET 4.8 faster with modern Span<T> 
+			<PackageReference Include="System.Memory" Version="4.5.5" />
+
+			-->
+
+	</ItemGroup>
+
+	<!-- OLD SYSTEM REFERENCES (Only needed for the .NET 4.8 part) -->
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
+		<Reference Include="System.Net.Http" />
+		<!-- Other standard libs (System.Drawing, Windows.Forms) are added automatically by UseWindowsForms -->
+	</ItemGroup>
+
 </Project>
+
