--- a/Win10_BrightnessSlider/Win10_BrightnessSlider.csproj
+++ b/Win10_BrightnessSlider/Win10_BrightnessSlider.csproj
@@ -8,10 +8,11 @@
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Platforms>AnyCPU;x64</Platforms>
-	
+
 		<AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
 	    <AppendRuntimeIdentifierToOutputPath>true</AppendRuntimeIdentifierToOutputPath>
 	    <ApplicationIcon>brightness.ico</ApplicationIcon>
+		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -81,12 +82,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Costura.Fody" Version="4.0.0" />
+	  <PackageReference Include="Costura.Fody" Version="5.7.0">
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
+	  <PackageReference Include="Fody" Version="6.8.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="LiteDB" Version="5.0.21" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	  <PackageReference Include="MouseKeyHook" Version="5.7.1" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="SharpHook" Version="5.3.8" />
+	  <PackageReference Include="System.Resources.Extensions" Version="8.0.0" />
 	  <PackageReference Include="Tomlyn" Version="0.18.0" />
 	</ItemGroup>
 
